[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Oxanium-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaces/UserInterface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
margin_right = 1025.0
margin_bottom = 603.0
color = Color( 0, 0, 0, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
margin_left = 488.319
margin_top = 95.5953
margin_right = 583.319
margin_bottom = 124.595
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
margin_left = 376.339
margin_top = 170.738
margin_right = 705.339
margin_bottom = 381.738
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_right = 329.0
margin_bottom = 67.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_top = 71.0
margin_right = 329.0
margin_bottom = 138.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_top = 142.0
margin_right = 329.0
margin_bottom = 211.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="PauseOverlay/VBoxContainer/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="PauseOverlay/VBoxContainer/Load" to="." method="_on_Load_button_up"]
[connection signal="button_up" from="PauseOverlay/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_button_up"]
